--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-pandas
-requests
-progressbar2
-cached-property
+cached-property==1.5.1
+certifi==2019.11.28
+chardet==3.0.4
+idna==2.9
+numpy==1.18.2
+pandas==1.0.3
+progressbar2==3.50.1
+python-dateutil==2.8.1
+python-utils==2.4.0
+pytz==2019.3
+requests==2.23.0
+six==1.14.0
+urllib3==1.25.8
