--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ flake8:
   before_script:
     - pip install flake8
   script:
-    - flake8 --exclude=tests -v --per-file-ignores='cityair_api/__init__.py:F401 setup.py:E121'
+    - flake8 cityair_api -v --per-file-ignores='cityair_api/__init__.py:F401 setup.py:E121'
 
 pytest:
   stage: test
